--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -18,10 +18,10 @@ daemonize yes
 
 # When run as a daemon, Redis write a pid file in /var/run/redis.pid by default.
 # You can specify a custom pid file location here.
-pidfile /var/run/redis.pid
+pidfile /var/run/redis-<%= version %>.pid
 
 # Accept connections on the specified port, default is 6379
-port 6379
+port <%= port %>
 
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for connections.
@@ -42,7 +42,7 @@ loglevel notice
 # Specify the log file name. Also 'stdout' can be used to force
 # the demon to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /var/log/redis.log
+logfile /var/log/redis-<%= version %>.log
 
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
@@ -80,7 +80,7 @@ dbfilename dump.rdb
 
 # For default save/load DB in/from the working directory
 # Note that you must specify a directory not a file name.
-dir /var/lib/redis/
+dir /var/lib/redis-<%= version %>/
 
 ################################# REPLICATION #################################
 
