Make several redis of same version manageable
Use the name parameter in the file names instead of version,
so that now several instances of redis with same version are
manageable.

--- a/templates/logrotate.erb
+++ b/templates/logrotate.erb
@@ -1,6 +1,6 @@
 # Managed by puppet
 
-/var/log/redis-<%= version %>.log {
+/var/log/redis-<%= real_name %>.log {
         daily
         dateext
         missingok
