--- a/templates/redis-server.erb
+++ b/templates/redis-server.erb
@@ -1,6 +1,6 @@
 #! /bin/sh
 ### BEGIN INIT INFO
-# Provides:     redis-server-<%= version %>
+# Provides:     redis-server-<%= real_name %>
 # Required-Start:   $syslog
 # Required-Stop:    $syslog
 # Should-Start:     $local_fs
@@ -12,15 +12,15 @@
 ### END INIT INFO
 
 
-PATH=<%= bin %>:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
-DAEMON=<%= bin%>/redis-server
-REDIS_CLI=<%= bin%>/redis-cli
-CONFIG_FILE=/etc/redis-<%= version %>.conf
+PATH=<%= real_bin %>:/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
+DAEMON=<%= real_bin%>/redis-server
+REDIS_CLI=<%= real_bin%>/redis-cli
+CONFIG_FILE=/etc/redis-<%= real_name %>.conf
 DAEMON_ARGS="$CONFIG_FILE"
 NAME=redis-server
 DESC=redis-server
-PIDFILE=/var/run/redis-<%= version %>.pid
-LOGFILE=/var/log/redis-<%= version %>.log
+PIDFILE=/var/run/redis-<%= real_name %>.pid
+LOGFILE=/var/log/redis-<%= real_name %>.log
 
 test -x $DAEMON || exit 0
 test -x $DAEMONBOOTSTRAP || exit 0
