--- a/templates/redis.conf.2.4.erb
+++ b/templates/redis.conf.2.4.erb
@@ -65,9 +65,11 @@ databases 16
 #
 #   Note: you can disable saving at all commenting all the "save" lines.
 
+<% if save then %>
 save 900 1
 save 300 10
 save 60 10000
+<% end %>
 
 # Compress string objects using LZF when dump .rdb databases?
 # For default that's set to 'yes' as it's almost always a win.
