--- a/templates/redis-server.erb
+++ b/templates/redis-server.erb
@@ -45,7 +45,7 @@ case "$1" in
     then
       echo "failed"
     else
-      LISTENING_PORT=`grep -E "port +([0-9]+)" "$CONFIG_FILE" | grep -Eo "[0-9]+"`
+      LISTENING_PORT=`grep -E "^port +([0-9]+)" "$CONFIG_FILE" | grep -Eo "[0-9]+"`
       $REDIS_CLI -p $LISTENING_PORT SHUTDOWN
       #rm -f $PIDFILE
     fi
