--- a/templates/logrotate.erb
+++ b/templates/logrotate.erb
@@ -6,5 +6,7 @@
         missingok
         rotate 5
         compress
-        copytruncate
+        delaycompress
+        notifempty
+        create 0640 redis adm
 }
