--- a/templates/redis.conf.2.4.erb
+++ b/templates/redis.conf.2.4.erb
@@ -18,10 +18,10 @@ daemonize yes
 
 # When run as a daemon, Redis write a pid file in /var/run/redis.pid by default.
 # You can specify a custom pid file location here.
-pidfile /var/run/redis-<%= real_name %>.pid
+pidfile /var/run/redis-<%= @real_name %>.pid
 
 # Accept connections on the specified port, default is 6379
-port <%= port %>
+port <%= @port %>
 
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for connections.
@@ -42,7 +42,7 @@ loglevel notice
 # Specify the log file name. Also 'stdout' can be used to force
 # the demon to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile /var/log/redis-<%= real_name %>.log
+logfile /var/log/redis-<%= @real_name %>.log
 
 # Set the number of databases. The default database is DB 0, you can select
 # a different one on a per-connection basis using SELECT <dbid> where
@@ -65,7 +65,7 @@ databases 16
 #
 #   Note: you can disable saving at all commenting all the "save" lines.
 
-<% if save then %>
+<% if @save then %>
 save 900 1
 save 300 10
 save 60 10000
@@ -82,7 +82,7 @@ dbfilename dump.rdb
 
 # For default save/load DB in/from the working directory
 # Note that you must specify a directory not a file name.
-dir /var/lib/redis-<%= real_name %>/
+dir /var/lib/redis-<%= @real_name %>/
 
 ################################# REPLICATION #################################
 
@@ -91,14 +91,14 @@ dir /var/lib/redis-<%= real_name %>/
 # so for example it is possible to configure the slave to save the DB with a
 # different interval, or to listen to another port, and so on.
 #
-<% if master_ip then -%>slaveof <%= master_ip %> <%= master_port %><% end -%>
+<% if @master_ip then -%>slaveof <%= @master_ip %> <%= @master_port %><% end -%>
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the slave to authenticate before
 # starting the replication synchronization process, otherwise the master will
 # refuse the slave request.
 #
-<% if master_password then -%>masterauth <%= master_password %><% end %>
+<% if @master_password then -%>masterauth <%= @master_password %><% end %>
 
 ################################## SECURITY ###################################
 
@@ -197,7 +197,7 @@ appendfsync everysec
 # To enable VM just set 'vm-enabled' to yes, and set the following three
 # VM parameters accordingly to your needs.
 
-<% if version.to_f <= 2.4 then %>
+<% if @version.to_f <= 2.4 then %>
 vm-enabled no
 # vm-enabled yes
 <% end %>
